# overall

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  plan.md
docs/: ai_agent_instructions.md  architecture.md  claude-web-research-preview-notes.md  conversation-summary.md  design.md  learnings.md  older-summary.md  oldest-summary.md  plan.md  prd.md  prioritized-summary.md  research.txt  status.md  summary.md  testing.md  todo-refresh-features.md
overall-cli/: Cargo.toml
overall-cli/src/: error.rs  lib.rs  local_git.rs  main.rs
overall-cli/src/ai/: mod.rs
overall-cli/src/analysis/: mod.rs
overall-cli/src/config/: mod.rs
overall-cli/src/github/: client_trait.rs  commands.rs  mod.rs  real_client.rs
overall-cli/src/models/: mod.rs
overall-cli/src/server/: mod.rs
overall-cli/src/storage/: mod.rs  schema.sql
overall-cli/src/test_support/: fixtures.rs  mock_github.rs  mod.rs
scripts/: build-all.sh  check-setup.sh  run-web.sh  serve.sh  setup-groups.sql
static/: index.html  repos.json
wasm-ui/: Cargo.toml  build.rs
wasm-ui/src/: lib.rs
wiki/: Architecture-Overview.md  Data-Flow.md  GitHub-Integration.md  Home.md  Storage-Layer.md  UI-Components.md  Web-Server-API.md
