[workspace]
resolver = "2"
members = [
    "overall-cli",
    "wasm-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Michael A Wright <softwarewrighter@users.noreply.github.com>"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime (for backend)
tokio = { version = "1.35", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Configuration
toml = "0.8"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Yew (for WASM UI)
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlAnchorElement",
    "Storage",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
gloo = "0.11"
yew-router = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
